# Backend

./: .dockerignore  .env  .woodpecker.yml  Cargo.toml  Dockerfile  build.rs  config.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: publish-ghcr.yml
.run/: Apply migrations.run.xml  Generate entities.run.xml  Run.run.xml  Test.run.xml  Unused imports.run.xml
.woodpecker/: dev.yml  production.yml  release.yml
entities/: Cargo.toml
entities/src/: user.rs
entity/: Cargo.toml
entity/src/: admin_roles.rs  admins.rs  auxiliary_roles.rs  black_list.rs  blacklist.rs  complaints.rs  courses.rs  fair.rs  fair_purchasing.rs  fairs.rs  fairs_purchasing.rs  group_components.rs  group_members.rs  group_part_selections.rs  group_parts.rs  group_parts_components.rs  groups.rs  groups_and_project_components.rs  individual_work_options.rs  lib.rs  options_components_and_quantity.rs  prelude.rs  project_components.rs  project_options.rs  projects.rs  roles.rs  roles_hierarchy.rs  security_codes.rs  settings.rs  student_part_selections.rs  student_parts.rs  student_parts_components.rs  student_roles.rs  student_uploads.rs  students.rs  students_and_groups.rs  students_and_individual_work.rs  students_components.rs  students_individual_work.rs  transactions.rs  (+3 more)
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_tables.rs  m20241020_154902_default_values.rs  m20250524_184046_projects.rs  m20250524_184935_admin_roles.rs  m20250524_185005_admins.rs  m20250524_212554_students_roles.rs  m20250524_212557_students.rs  m20250524_212919_security_codes.rs  m20250524_213908_blacklist.rs  m20250524_222426_groups.rs  m20250524_223708_group_members.rs  m20250524_224854_complaints.rs  m20250524_225515_fairs.rs  m20250524_232013_group_parts.rs  m20250524_232024_group_components.rs  m20250524_232040_group_parts_components.rs  m20250524_232050_group_part_selections.rs  m20250525_194150_transactions.rs  m20250525_200330_student_parts.rs  m20250525_200337_student_components.rs  m20250525_200348_student_parts_components.rs  m20250525_200353_student_part_selections.rs  m20250525_200401_student_uploads.rs  main.rs
migrations/: 20250721144203_initial_migration.sql  20250728192725_initial_migration.down.sql  20250728192725_initial_migration.up.sql  20251013131746_add_sellable_to_group_deliverable_components.down.sql  20251013131746_add_sellable_to_group_deliverable_components.up.sql  20251018131552_add_group_component_implementation_details.down.sql  20251018131552_add_group_component_implementation_details.up.sql  20260521094317_add_fair_mode.down.sql  20260521094317_add_fair_mode.up.sql  20260521150800_add_transaction_id_to_complaints.down.sql  20260521150800_add_transaction_id_to_complaints.up.sql  20260521154500_add_student_upload_workflow_fields.down.sql  20260521154500_add_student_upload_workflow_fields.up.sql  20260521170000_add_oral_exam.down.sql  20260521170000_add_oral_exam.up.sql  Cargo.toml
repository_macro/: Cargo.toml
repository_macro/src/: lib.rs
src/: logging.rs  main.rs  password_tests.rs  test_utils.rs
src/api/: mod.rs
src/app_data/: mod.rs
src/app_state/: mod.rs
src/common/: json_error.rs
src/config/: mod.rs
src/database/: auxiliary_roles_repository.rs  blacklist_repository.rs  complaints_repository.rs  courses_repository.rs  fair_repository.rs  groups_repository.rs  mod.rs  project_options_repository.rs  projects_repository.rs  repository_methods.rs  repository_methods_trait.rs  roles_repository.rs  security_codes_repository.rs  seed.rs  users_projects_roles_repository.rs  users_repository.rs
src/jwt/: admin_auth_factory.rs  admin_auth_middleware.rs  auth_factory.rs  auth_middleware.rs  claims.rs  get_user.rs  grants_extractor.rs  just_auth_factory.rs  (+7 more)
templates/: admin_welcome.html  admin_welcome.txt  confirm.html  confirm.txt  reset.html  reset.txt
tests/: e2e_auth_workflow.rs  e2e_complete_test.rs  e2e_database_workflow.rs  e2e_launch_tests.rs  e2e_live_server_tests.rs  e2e_tests.rs  health_simple_test.rs  integration_test.rs  real_server_test.rs
(+246 files in other folders)
