[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Federico Frigerio"]

[dependencies]
actix-web = "4.11.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
password-auth = "1.0.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
log = { version = "0.4.28", features = ["std"] }
num_enum = "0.7.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
mongodb = "3.3.0"
welds = { version = "0.4.18", features = ["postgres"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "chrono", "postgres"] }
rand = "0.9.2"
url = "2.5.7"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
minijinja = { version = "2.12.0", features = ["macros"] }
confirm-email = "0.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[build-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
