[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Federico Frigerio"]

[dependencies]
actix-web = "4.13.0"
actix-multipart = "0.7.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
password-auth = "1.0.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
utoipa = { version = "5.5.0", features = ["actix_extras", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
log = { version = "0.4.29", features = ["std"] }
num_enum = "0.7.6"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs"] }
welds = { version = "0.4.22", features = ["postgres"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
rand = "0.10.1"
url = "2.5.8"
lettre = { version = "0.11.22", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
minijinja = { version = "2.20.0", features = ["macros"] }
confirm-email = "0.1.3"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
actix-web-grants = "4.1.2"

[build-dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
