[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Federico Frigerio"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.0.1"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
